--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "canvas-confetti": "^1.6.0",
         "chart.js": "^4.2.1",
         "dragula": "^3.7.3"
     }
