--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravolt/avatar": "^5.0",
+        "opcodesio/log-viewer": "^2.4",
         "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
