--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "consoletvs/charts": "^6.6",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.0",
@@ -14,7 +15,8 @@
         "laravel/ui": "^4.2",
         "laravolt/avatar": "^5.0",
         "opcodesio/log-viewer": "^2.4",
-        "realrashid/sweet-alert": "^7.0"
+        "realrashid/sweet-alert": "^7.0",
+        "symfony/ux-chartjs": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
