--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravolt/avatar": "^5.0",
+        "nesbot/carbon": "^2.66",
         "opcodesio/log-viewer": "^2.4",
         "realrashid/sweet-alert": "^7.0",
         "symfony/ux-chartjs": "^2.8"
