--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravolt/avatar": "^5.0",
         "nesbot/carbon": "^2.66",
         "opcodesio/log-viewer": "^2.4",
+        "orangehill/iseed": "^3.0",
         "realrashid/sweet-alert": "^7.0",
         "symfony/ux-chartjs": "^2.8"
     },
