--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
         "laravolt/avatar": "^5.0",
         "nesbot/carbon": "^2.66",
         "opcodesio/log-viewer": "^2.4",
         "orangehill/iseed": "^3.0",
         "realrashid/sweet-alert": "^7.0",
+        "spatie/laravel-permission": "^5.10",
         "symfony/ux-chartjs": "^2.8"
     },
     "require-dev": {
