--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,16 @@
         "nesbot/carbon": "^2.66",
         "opcodesio/log-viewer": "^2.4",
         "orangehill/iseed": "^3.0",
+        "rakutentech/laravel-request-docs": "^2.16",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10",
         "symfony/ux-chartjs": "^2.8"
     },
     "require-dev": {
+        "andyabih/laravel-to-uml": "^1.0",
+        "beyondcode/laravel-er-diagram-generator": "^2.0",
         "fakerphp/faker": "^1.9.1",
+        "kevincobain2000/laravel-erd": "^1.6",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
