--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "rakutentech/laravel-request-docs": "^2.16",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10",
-        "symfony/ux-chartjs": "^2.8"
+        "symfony/ux-chartjs": "^2.8",
+        "spatie/calendar-laravel": "~2.0"
     },
     "require-dev": {
         "andyabih/laravel-to-uml": "^1.0",
