--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.9",
+        "@fullcalendar/daygrid": "^6.1.9",
+        "@fullcalendar/list": "^6.1.9",
+        "@fullcalendar/timegrid": "^6.1.9",
+        "@nivo/bar": "^0.63.0",
+        "@nivo/core": "^0.83.0",
+        "@nivo/line": "^0.83.0",
+        "@nivo/pie": "^0.63.0",
         "canvas-confetti": "^1.6.0",
         "chart.js": "^4.3.0",
         "dragula": "^3.7.3"
